intTests/test_parse_errors/lexer005.log.good
Loading file "lexer005.saw"
lexer005.saw:3:20-3:21: Error: Syntax error: missing ';'
FAILED
