intTests/test_parse_errors/lexer005.saw
// This fails with a missing ; after the comment is processed.

let x = /* {{ */ 2 }};


